--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Découverte de Nice - CesiumJS</title>
-  <!-- CesiumJS 1.111+ CDN -->
   <script src="https://cesium.com/downloads/cesiumjs/releases/1.111/Build/Cesium/Cesium.js"></script>
   <link href="https://cesium.com/downloads/cesiumjs/releases/1.111/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -12,9 +11,16 @@
   <div id="cesiumContainer"></div>
   <canvas id="lampeCanvas"></canvas>
   <div id="questPanel"></div>
-  <div id="customAlertBox" style="display:none;position:fixed;z-index:1000;left:0;top:0;width:100vw;height:100vh;background:rgba(0,0,0,0.3);">
-    <div id="customAlertContent" style="background:#fff;margin:20vh auto;padding:20px;border-radius:8px;max-width:350px;box-shadow:0 2px 10px #000a;text-align:center;"></div>
+  <div id="customAlertBox" style="display:none;">
+    <div id="customAlertContent"></div>
   </div>
+  <div id="videoOverlay" style="display:none;">
+    <iframe id="videoIframe" allowfullscreen></iframe>
+    <button id="closeVideo">✖</button>
+  </div>
+  <button id="btnRecenter" title="Recentrer la carte">📍</button>
+  <button id="btnFullscreen" title="Plein écran">⛶</button>
   <script src="app.js"></script>
 </body>
 </html>
+
